--- a/songs.html
+++ b/songs.html
@@ -51,7 +51,7 @@
                 <span class="explanation">I remember we were texting while I was listening to this and I felt a bit happier then, since I was still recovering from my arm injury.</span>
             </div>
         </div>
-        <button onclick="location.href='Web.html'">Back to Main Page</button>
+        <button onclick="location.href='index.html'">Back to Main Page</button>
     </div>
 
     <script>
