--- a/songs.html
+++ b/songs.html
@@ -36,11 +36,11 @@
             </div>
             <div class="song-item">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7EAMXbLcL0qXmciM5SwMh2?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                <span class="explanation">This song feels like us leaving prom and just talking about life while staring at the moon. With just hours before I have to go back to the airportm, we'd probably have the best yap session ever.</span>
+                <span class="explanation">This song feels like us leaving prom and just talking about life while staring at the moon. With just hours before I have to go back to the airport, we'd probably have the best yap session ever.</span>
             </div>
             <div class="song-item">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/70YTBH8vOGJNMhy6186yFm?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                <span class="explanation">This song gives hazy summer vibes to me, I've always associated you with summer ☀</span>
+                <span class="explanation">This song gives hazy summer vibes to me, I've always thought of you as a summery person</span>
             </div>
             <div class="song-item">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3xKsf9qdS1CyvXSMEid6g8?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -48,7 +48,7 @@
             </div>
             <div class="song-item">
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4f8Mh5wuWHOsfXtzjrJB3t?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                <span class="explanation">I remember we were texting while I was listening to this and I felt a bit happier then, since I was still recovering from my arm injury.</span>
+                <span class="explanation">I remember we were texting while I was listening to this and I felt a bit happier then, since I was still recovering from my broken arm.</span>
             </div>
         </div>
         <button onclick="location.href='index.html'">Back to Main Page</button>
